--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+
+  --font-sans:var(--font-sans),ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  --font-mono:var(--font-mono),ui-monospace,SFMono-Regular
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -113,10 +116,37 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+*{
+  @apply border-border;
+}
+h1{
+  @apply text-4xl md:text-6xl xl:text-7xl font-bold;
+}
+h2{
+  @apply text-xl lg:text-3xl font-medium;
+}
+h3{
+  @apply text-2xl lg:text-4xl font-medium;
+}
+
+a{
+  @apply hover:cursor-pointer;
+}
+
+button{
+  @apply hover:cursor-pointer   ;
+}
+
+}
+
+
+@utility container{
+  margin-inline:auto;
+  padding-inline:2rem;
+  @media(width>=--theme(--breakpoint-sm)){
+    max-width:none;
   }
-  body {
-    @apply bg-background text-foreground;
+  @media(width>=1400px){
+    max-width:1400px;
   }
 }
