--- a/app/globals.css
+++ b/app/globals.css
@@ -137,6 +137,22 @@ button{
   @apply hover:cursor-pointer   ;
 }
 
+
+
+@keyframes gradient-x{
+  0%,100%{
+    background-size:200% 200%;
+    background-position:left center;
+  }
+  50%{
+    background-size:200% 200%;
+    background-position:right center;
+}
+}
+
+animate-gradient-x{
+  animation:gradient-x 15s ease infinite;
+}
 }
 
 
@@ -149,4 +165,18 @@ button{
   @media(width>=1400px){
     max-width:1400px;
   }
+}
+
+@keyframes border-x {
+  0%, 100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
+
+/* Moves the gradient smoothly */
+.animate-border-x {
+  animation: border-x 3s linear infinite;
 }
